test/tests/stages/16_characters_and_strings/valid/strings_as_lvalues/empty_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  *
  identifier(empty)
  =
  string literal("")
  ;
  return
  identifier(empty)
  [
  const int(0)
  ]
  ;
  }
