test/tests/stages/16_characters_and_strings/invalid_types/string_literal_is_plain_char_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  signed
  char
  *
  identifier(ptr)
  =
  string literal("foo")
  ;
  return
  const int(0)
  ;
  }
